# QuantPilot-AI

./: .dockerignore  .env.example  .gitignore  AUDIT_REPORT.md  COMPLETE_OPTIMIZATION_FINAL_REPORT.md  COMPLETE_OPTIMIZATION_REPORT.md  CUSTOM_AI_EXAMPLES.md  CUSTOM_AI_PROVIDER_GUIDE.md  DEPLOY.md  Dockerfile  Dockerfile.updater  MODIFICATION_SUMMARY.md  PRODUCTION_CHECKLIST.md  README.md  _deprecated_main.py  ai_analyzer.py  alembic.ini  analytics.py  app.py  auth.py  backups.py  chain_verify.py  commodity_data.py  config.py  database.py  docker-compose.yml  enhanced_market_data.py  exchange.py  fix_rename.py  liquidity_analyzer.py  main.py  market_data.py  models.py  nginx.conf.example  notifier.py  payment.py  position_monitor.py  pre_filter.py  pyproject.toml  requirements.txt  (+10 more)
.github/workflows/: docker-publish.yml  test.yml
backtest/: __init__.py  engine.py  metrics.py  strategies.py
config/: alerting_rules.yml
core/: __init__.py  account_risk.py  ai_cost_tracker.py  api_versioning.py  auth.py  cache.py  config.py  config_hot_reload.py  database.py  errors.py  exceptions.py  factory.py  hot_reload.py  lifespan.py  login_guard.py  metrics.py  middleware.py  openapi_docs.py  request_tracking.py  request_utils.py  runtime_settings.py  security.py  totp.py  trading_control.py
core/cache/: __init__.py  multi_layer_cache.py
core/events/: __init__.py  event_bus.py  event_types.py
core/logging/: __init__.py  structured_logging.py
core/metrics/: __init__.py  prometheus_metrics.py  recorders.py
core/utils/: __init__.py  common.py  datetime.py
docs/: API_DOCUMENTATION.md  OPERATIONS_MANUAL.md  P1_P5_USAGE_EXAMPLES.py  TRAILING_STOP_BUG_FIX.md
grafana/dashboards/: quantpilot.json
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_align_runtime_schema.py  003_add_position_margin_liquidation.py  004_widen_ticker_columns.py
pine/: QuantPilot_SMC_Indicator_v6.pine  QuantPilot_SMC_Strategy_v6.pine
routers/: admin.py  ai_config.py  auth.py  backtest.py  chart.py  health.py  i18n.py  social.py  strategies.py  strategy_editor.py  subscription.py  user.py  webhook.py  websocket.py
scripts/: check_env.py  debug_pnl_issue.py  docker-entrypoint.sh  docker-updater.py  start.ps1  start.sh  test_custom_provider.py  verify_rr.py  verify_soft_fail.py
services/: order_reconciler.py  signal_processor.py
static/: app.js  home.html  index.html  login.html  manifest.json  register.html  style.css  sw.js
static/js/: api.js  auth.js  charts.js  i18n.js  qp-core.js  toast.js  utils.js
strategies/: __init__.py  dca.py  grid.py
tests/: conftest.py  test_admin_security_flows.py  test_admin_updates.py  test_ai_analyzer_settings.py  test_api.py  test_auth_security.py  test_backtest_api.py  test_backtest_engine.py  test_edge_cases.py  test_exchange_credentials.py  test_exchange_sizing.py  test_position_pnl.py  test_pwa_routes.py  test_runtime_settings.py  test_security.py  test_signal_processor.py  test_smc.py  test_strategies.py  test_trailing_stop.py  test_updater.py  test_voting.py  test_websocket.py
tests/integration/: test_trade_flow.py
tests/load/: k6_script.js  locustfile.py
tests/unit/: test_cache.py  test_ghost_position.py  test_leverage_retry.py
