[project]
name = "signal-server"
version = "4.5.4"
description = "AI-powered crypto trading signal processor with subscriptions"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Signal Server Team"}
]
keywords = ["trading", "crypto", "ai", "fastapi", "webhook"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.30.0,<1.0",
    "httpx>=0.27.0,<1.0",
    "python-dotenv>=1.0.0,<2.0",
    "pydantic>=2.9.0,<3.0",
    "pydantic-settings>=2.5.0,<3.0",
    "ccxt==4.5.52",
    "apscheduler>=3.10.0,<4.0",
    "aiofiles>=23.2.0,<25.0",
    "loguru>=0.7.0,<1.0",
    "cryptography>=42.0.0,<45.0",
    "PyJWT>=2.9.0,<3.0",
    "pyotp>=2.9.0,<3.0",
    "qrcode[pil]>=7.4.0,<8.0",
    "asyncpg>=0.29.0,<1.0",
    "aiosqlite>=0.20.0,<1.0",
    "sqlalchemy[asyncio]>=2.0.0,<3.0",
    "greenlet>=3.0.0,<4.0",
    "alembic>=1.13.0,<2.0",
    "redis>=5.0.0,<6.0",
    "hiredis>=2.3.0",
    "prometheus-client>=0.20.0,<1.0",
    "yfinance>=0.2.0,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = ["docs/P1_P5_USAGE_EXAMPLES.py"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
